Resolve horizonytal scrollbar

--- a/HTML5Application/public_html/css/custom.css
+++ b/HTML5Application/public_html/css/custom.css
@@ -16,9 +16,6 @@
     overflow: no-display;
     height: 100%;
     max-height: 100%;
-    width: 100%;
-    max-width: 100%;
-
 }
 
 
